@@ -1,5 +1,6 @@
 == 3.5 ==
 
+* Fixed members pagination issue when filter becomes reset after going to the next page
 * Fixed coupons start date issue
 * Fixed coupons timezones issue
 * Fixed multiple levels compatibility issue
